trunk/Archive2/82/a699dfadf66731/output
main.cpp:16:23: error: no member named 'is_trivially_copy_constructible' in namespace 'std'
              << std::is_trivially_copy_constructible<Ex1>::value << '\n'
                 ~~~~~^
main.cpp:16:55: error: 'Ex1' does not refer to a value
              << std::is_trivially_copy_constructible<Ex1>::value << '\n'
                                                      ^
main.cpp:4:8: note: declared here
struct Ex1 {
       ^
main.cpp:16:61: error: no member named 'value' in the global namespace
              << std::is_trivially_copy_constructible<Ex1>::value << '\n'
                                                          ~~^
main.cpp:18:23: error: no member named 'is_trivially_copy_constructible' in namespace 'std'
              << std::is_trivially_copy_constructible<Ex2>::value << '\n'
                 ~~~~~^
main.cpp:18:55: error: 'Ex2' does not refer to a value
              << std::is_trivially_copy_constructible<Ex2>::value << '\n'
                                                      ^
main.cpp:7:8: note: declared here
struct Ex2 {
       ^
main.cpp:18:61: error: no member named 'value' in the global namespace
              << std::is_trivially_copy_constructible<Ex2>::value << '\n'
                                                          ~~^
6 errors generated.
